--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "kafka-please",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A pre-built version of Kafka that can be started and stopped from Node.js",
   "main": "src/index.js",
   "scripts": {
     "test": "node node_modules/mocha/bin/mocha"
   },
   "author": "Eirik Sletteberg",
-  "repository" :
-  {
-    "type" : "git",
-    "url" : "https://github.com/eirslett/kafka-please"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eirslett/kafka-please"
   },
   "license": "Apache-2.0",
   "dependencies": {
